Added node addition and status bar

--- a/main.kv
+++ b/main.kv
@@ -1,8 +1,11 @@
 <GraphEditor>:
-	canvas:
+	canvas.before:
 		Color:
 			rgba:(255,255,255)
 		Rectangle:
 			pos:self.pos
 			size:self.size
+		
+
+	
 
